--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^4.11.0",
+    "mongoose": "^6.6.6",
     "morgan": "^1.10.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
