--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "mongodb": "^4.11.0",
     "mongoose": "^6.6.6",
     "morgan": "^1.10.0",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
